--- a/example.env
+++ b/example.env
@@ -2,9 +2,9 @@ NODE_ENV=
 PORT=1337
 
 DB_DIALECT=mysql
-DB_HOST=
-DB_USER=
+DB_HOST=localhost
+DB_USER=root
 DB_PASSWORD=
-DB_NAME=
+DB_NAME=test
 
 IP_ADDRESS_FRONTEND=
