--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: nodejs
-    container_name: nodejs
+    image: nodejs1
+    container_name: nodejs1
     restart: unless-stopped
     env_file:
       - .env
@@ -20,11 +20,14 @@ services:
 
   mysql:
     image: mysql
-    command: mysqld --default-authentication-plugin=mysql_native_password
+    container_name: mysql
     restart: unless-stopped
     volumes:
-      - ./data:/var/lib/mysql
-    env_file: 
-      - .env
+      - db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
+    ports:
+    - "3306:3306"
+
+volumes:
+  db:
