--- a/example.env
+++ b/example.env
@@ -2,9 +2,9 @@ NODE_ENV=
 PORT=1337
 
 DB_DIALECT=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_NAME=test
 DB_PORT=3306
 
