--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "mysql2": "^2.2.5",
     "node-mocks-http": "^1.11.0",
     "nyc": "^15.1.0",
+    "pg": "^8.8.0",
     "rewire": "^5.0.0",
     "sequelize": "^6.6.2",
     "sequelize-mock": "^0.10.2",
     "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "uuid": "^9.0.0"
   }
 }
