--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "unit-test": "NODE_ENV=unit-test nyc --reporter=lcov --reporter=text mocha \"tests/**/**_unitTest.js\" --exit --timeout 10000"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -20,6 +20,8 @@
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
@@ -33,6 +35,8 @@
     "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0",
     "supertest": "^6.1.6",
+    "swagger-autogen": "^2.22.0",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   }
 }
