--- a/dev-example.env
+++ b/dev-example.env
@@ -1,11 +1,10 @@
-NODE_ENV=
+NODE_ENV=production
 PORT=1337
+apiVersion=v1
 
-DB_DIALECT=mysql
+DB_DIALECT=postgres
 DB_HOST=localhost
-DB_USER=root
+DB_USER=
 DB_PASSWORD=
-DB_NAME=test
-DB_PORT=3306
-
-IP_ADDRESS_FRONTEND=
+DB_NAME=
+DB_PORT=5432
